Courses validation 80% done

--- a/courses.html
+++ b/courses.html
@@ -16,7 +16,7 @@
       <div>
         <nav class="navbar navbar-expand-md navbar-light fixed-top shadow p-3 mb-4 bg-white">
           <div class="container-fluid no-padding">
-            <a class="navbar-brand" href="index.html"><img src="assets/images/logo_blue.png" height="60px"></a>
+            <a class="navbar-brand" href="index.html"><img class="brand-logo" src="assets/images/logo_blue.png" alt=""></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" data-target="#navbarSupportedContent" aria-controls="navbarNav navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -94,7 +94,7 @@
                     <p>Below there is more information on each course and each unit you need to complete:</p>
                   </div>
                   <div class="col-12 col-md-4">
-                  <img class="acc-pt-pic" src="assets/images/pt-icon-cropped.png" alt="" width="200px">
+                  <img class="acc-pt-pic" src="assets/images/pt-icon-cropped.png" alt="">
                   </div>
                 </div>
                 <!--Tabs for PT Courses-->
@@ -114,11 +114,13 @@
                         <div class="row">
                           <div class="col-12">
                             <p>The course has 5 units which are:</p>
+                            <ol>
                               <li>Principles of anatomy, physiology and fitness</li>
                               <li>Professionalism and customer care for fitness instructors</li>
                               <li>Health and safety in the fitness environment</li>
                               <li>Conducting client consultations to support positive behaviour change</li>
                               <li>Planning and instructing gym-based exercise</li>
+                            </ol>
                               <br>
                           </div>
                         </div>
@@ -132,6 +134,7 @@
                           <div class="col-12">
                             <div class="col-12">
                               <p>The course has 6 units which are:</p>
+                              <ol>
                                 <li>Applied anatomy and physiology for exercise, health and fitness</li>
                                 <li>The principles of nutrition and their application to exercise and health</li>
                                 <li>Understanding lifestyle, health, wellbeing and common medical
@@ -139,6 +142,7 @@
                                 <li>Encouraging positive health and fitness behaviours in clients</li>
                                 <li>Programme design and delivery for personal training</li>
                                 <li>Professionalism and business acumen for personal trainers</li>
+                              </ol>
                                 <br>
                           </div>
                           </div>
@@ -152,13 +156,16 @@
                           <div class="col-12">
                             <p>The full course is a combination of both courses above.</p>
                             <p>The initial 5 units which are:</p>
+                            <ol>
                               <li>Principles of anatomy, physiology and fitness</li>
                               <li>Professionalism and customer care for fitness instructors</li>
                               <li>Health and safety in the fitness environment</li>
                               <li>Conducting client consultations to support positive behaviour change</li>
                               <li>Planning and instructing gym-based exercise</li>
+                            </ol>
                               <br>
                               <p>This second 6 units which are:</p>
+                            <ol>
                                 <li>Applied anatomy and physiology for exercise, health and fitness</li>
                                 <li>The principles of nutrition and their application to exercise and health</li>
                                 <li>Understanding lifestyle, health, wellbeing and common medical
@@ -166,6 +173,7 @@
                                 <li>Encouraging positive health and fitness behaviours in clients</li>
                                 <li>Programme design and delivery for personal training</li>
                                 <li>Professionalism and business acumen for personal trainers</li>
+                              </ol>
                                 <br>
                           </div>
                        </div>
@@ -218,11 +226,13 @@
                         <div class="row">
                           <div class="col-12">
                             <p>The course has 5 units which are:</p>
+                            <ol>
                               <li>Anatomy and physiology for sports massage</li>
                               <li>Principles of health and fitness</li>
                               <li>Understand the principles of soft tissue dysfunction</li>
                               <li>Professional practice in sports massage</li>
                               <li>Sports massage treatments</li>
+                            </ol>
                               <br>
                           </div>
                         </div>
@@ -236,9 +246,11 @@
                           <div class="col-12">
                             <div class="col-12">
                               <p>The course has 3 units which are:</p>
+                              <ol>
                                 <li>Conducting subjective and objective assessment</li>
                                 <li>Provide sports massage techniques to prevent and manage injury</li>
                                 <li>Treatment modalities to support soft tissue repair</li>
+                              </ol>
                                 <br>
                           </div>
                           </div>
@@ -305,7 +317,7 @@
             <h1 class="contact-top membership-contact">If you have any questions get in contact!</h1>
             <h2>If you'd like to find out more information please fill out the form below.</h2>
           </div>
-          <dv class="row justify-content-center">
+          <div class="row justify-content-center">
             <div class="col-12 col-sm-10 col-lg-8 col-xl-6">
               <div class="input-group mb-1">
                 <span class="input-group-text" id="basic-addon1">First Name</span>
@@ -327,7 +339,7 @@
               <button type="submit" class="btn btn-primary" id="send-button">Send Message</button>
             </div>
          </div>
-        </dv>
+        </div>
         </div>
       </form>
     </section>
