--- a/index.html
+++ b/index.html
@@ -145,14 +145,14 @@
       <!-- 3 circular pictures + info -->
         <div class="row">
           <div class="col-12 col-md-6 col-lg-4 shadow p-3 mb-5 bg-body rounded">
-            <img class="profilepic" src="/assets/images/greg_head.png" alt="">
+            <img class="profilepic" src="assets/images/greg_head.png" alt="">
             <h4>Greg - Personal Trainer</h4>
             <p>Having delivered THOUSANDS of hours of personal training since starting in 2005, Greg can 
               help you achieve it all whether you want to get stronger for a specific 
               sport or want to get rid of any excess fat and look great for your next holiday.</p>
           </div>
           <div class="col-12 col-md-6 col-lg-4 shadow p-3 mb-5 bg-body rounded">
-            <img class="profilepic" src="/assets/images/sarah_head.png" alt="">
+            <img class="profilepic" src="assets/images/sarah_head.png" alt="">
             <h4>Sarah - Sports Therapist & PT</h4>
             <p>Being a Sports Therapist and Personal trainer gives Sarah an insight into how to both,
                work on an injury and help the healing process and work round the problem to help you achieve 
@@ -160,7 +160,7 @@
               </p>
           </div>
           <div class="col-12 col-md-6 col-lg-4 shadow p-3 mb-5 bg-body rounded">
-            <img class="profilepic" src="/assets/images/cropped-Max.jpg" alt="">
+            <img class="profilepic" src="assets/images/cropped-Max.jpg" alt="">
             <h4>Maximus - Emotional Support</h4>
             <p>This little guy is an integral part of our team at Balanced Training and always brings a smile to 
               your face whenever he comes through the gym door carrying a ball. He usually likes to chill
