--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <!--Navigation bar-->
         <nav class="navbar navbar-expand-md navbar-light fixed-top shadow p-3 mb-4 bg-white">
           <div class="container-fluid no-padding">
-            <a class="navbar-brand" href="index.html"><img class="brand-logo" src="assets/images/logo_blue.png" alt=""></a>
+            <a class="navbar-brand" href="index.html"><img class="brand-logo" src="assets/images/logo_blue.webp" alt=""></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" data-target="#navbarSupportedContent" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button> 
@@ -74,7 +74,7 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img class="overlay-image" src="assets/images/gym-cropped.jpg" alt="">
+            <img class="overlay-image" src="assets/images/gym-cropped.webp" alt="">
            
             <div class="container">
               <div class="carousel-caption text-end">
@@ -85,7 +85,7 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img class="overlay-image" src="assets/images/barbell.jpeg" alt="">
+            <img class="overlay-image" src="assets/images/barbell.webp" alt="">
             <div class="container">
               <div class="carousel-caption">
                 <h1>Reach your goals!</h1>
@@ -95,7 +95,7 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img class="overlay-image" src="assets/images/ptpic.png" alt="">
+            <img class="overlay-image" src="assets/images/ptpic.webp" alt="">
             <div class="container">
               <div class="carousel-caption text-start">
                 <h1>Courses</h1>
@@ -128,10 +128,10 @@
             <p>If you have any questions or concerns, please do not hesitate to get in touch.</p>
           </div>
           <div class="col-6 col-lg-4">
-            <img class="gym-pic" src="assets/images/gym-front.JPG" alt="">
+            <img class="gym-pic" src="assets/images/gym-front.webp" alt="">
           </div>
           <div class="col-6 d-block d-md-none">
-            <img class="gym-pic" src="assets/images/gym-rear.JPG" alt="">
+            <img class="gym-pic" src="assets/images/gym-rear.webp" alt="">
           </div>
         </div>
       </div>
@@ -145,14 +145,14 @@
       <!-- 3 circular pictures + info -->
         <div class="row">
           <div class="col-12 col-md-6 col-lg-4 shadow p-3 mb-5 bg-body rounded">
-            <img class="profilepic" src="assets/images/greg_head.png" alt="">
+            <img class="profilepic" src="assets/images/greg_head.webp" alt="">
             <h4>Greg - Personal Trainer</h4>
             <p>Having delivered THOUSANDS of hours of personal training since starting in 2005, Greg can 
               help you achieve it all whether you want to get stronger for a specific 
               sport or want to get rid of any excess fat and look great for your next holiday.</p>
           </div>
           <div class="col-12 col-md-6 col-lg-4 shadow p-3 mb-5 bg-body rounded">
-            <img class="profilepic" src="assets/images/sarah_head.png" alt="">
+            <img class="profilepic" src="assets/images/sarah_head.webp" alt="">
             <h4>Sarah - Sports Therapist & PT</h4>
             <p>Being a Sports Therapist and Personal trainer gives Sarah an insight into how to both,
                work on an injury and help the healing process and work round the problem to help you achieve 
@@ -160,7 +160,7 @@
               </p>
           </div>
           <div class="col-12 col-md-6 col-lg-4 shadow p-3 mb-5 bg-body rounded">
-            <img class="profilepic" src="assets/images/cropped-Max.jpg" alt="">
+            <img class="profilepic" src="assets/images/cropped-Max.webp" alt="">
             <h4>Maximus - Emotional Support</h4>
             <p>This little guy is an integral part of our team at Balanced Training and always brings a smile to 
               your face whenever he comes through the gym door carrying a ball. He usually likes to chill
