--- a/index.html
+++ b/index.html
@@ -246,6 +246,7 @@
       </div>
       
     </section>
+  <div><p>test text</p></div>
     <!--Footer-->
     <footer>
       <div class="row footer bg-dark justify-content-center">
