--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
       <div>
         <nav class="navbar navbar-expand-md navbar-light fixed-top shadow p-3 mb-4 bg-white">
           <div class="container-fluid no-padding">
-            <a class="navbar-brand" href="index.html"><img src="assets/images/logo_blue.png" height="60px"></a>
+            <a class="navbar-brand" href="index.html"><img src="assets/images/logo_blue.png" height="60px" alt="Balanced Training Logo"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" data-target="#navbarSupportedContent" aria-controls="navbarNav navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
