--- a/courses.html
+++ b/courses.html
@@ -16,7 +16,7 @@
       <div>
         <nav class="navbar navbar-expand-md navbar-light fixed-top shadow p-3 mb-4 bg-white">
           <div class="container-fluid no-padding">
-            <a class="navbar-brand" href="index.html"><img class="brand-logo" src="assets/images/logo_blue.png" alt=""></a>
+            <a class="navbar-brand" href="index.html"><img class="brand-logo" src="assets/images/logo_blue.png" alt="Balanced Training logo"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" data-target="#navbarSupportedContent" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -74,7 +74,7 @@
         <div class="accordion-item">
           <h2 class="accordion-header" id="headingOne">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
-              Personal Training Courses <img class="icon" src="/assets/images/pt-icon-small.png" alt="">
+              Personal Training Courses <img class="icon" src="/assets/images/pt-icon-small.png" alt="Smaller Personal training icon">
             </button>
           </h2>
           <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne">
@@ -94,7 +94,7 @@
                     <p>Below there is more information on each course and each unit you need to complete:</p>
                   </div>
                   <div class="col-12 col-md-4">
-                  <img class="acc-pt-pic" src="assets/images/pt-icon-cropped.png" alt="">
+                  <img class="acc-pt-pic" src="assets/images/pt-icon-cropped.png" alt="Cropped Personal training icon">
                   </div>
                 </div>
                 <!--Tabs for PT Courses-->
@@ -189,7 +189,7 @@
         <div class="accordion-item">
           <h2 class="accordion-header" id="headingTwo">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-              Sports Massage Courses <img class="icon" src="/assets/images/sm-icon-small.png" alt="">
+              Sports Massage Courses <img class="icon" src="/assets/images/sm-icon-small.png" alt="Small Sports massage icon">
             </button>
           </h2>
           <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo">
@@ -210,7 +210,7 @@
                     <p></p>
                   </div>
                   <div class="col-12 col-md-6">
-                    <img class="acc-pt-pic" src="/assets/images/sm-icon.png" alt="">
+                    <img class="acc-pt-pic" src="/assets/images/sm-icon.png" alt="Sports massage icon">
                   </div>
                 </div>
                 <!--Test start-->
@@ -276,7 +276,7 @@
       <div class="accordion-item">
           <h2 class="accordion-header" id="headingThree">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-              First Aid Courses <img class="icon" src="/assets/images/first-aid-cropped.png" alt="">
+              First Aid Courses <img class="icon" src="/assets/images/first-aid-cropped.png" alt="First aid picture">
             </button>
           </h2>
           <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree">
@@ -302,7 +302,7 @@
                     <p></p>
                   </div>
                   <div class="col-12 col-md-6">
-                    <img class="acc-pt-pic" src="/assets/images/first-aid-full.png" alt="">
+                    <img class="acc-pt-pic" src="/assets/images/first-aid-full.png" alt="Full First Aid picture">
                   </div>
                 </div>
                 </div>
