--- a/courses.html
+++ b/courses.html
@@ -28,11 +28,11 @@
                 <li class="nav-item">
                   <a class="nav-link " href="index.html" aria-current="page">Home</a>
                 </li>
-                <li id="active" class="nav-item">
+                <li class="nav-item">
                   <a class="nav-link" href="gym.html">Gym</a>
                 </li>
-                <li class="nav-item">
-                  <a class="nav-link active" href="courses.html">Courses<span class="sr-only">(current)</span></a>
+                <li id="active" class="nav-item active">
+                  <a class="nav-link " href="courses.html">Courses<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="contact.html">Contact Us</a>
