--- a/gym.html
+++ b/gym.html
@@ -74,7 +74,7 @@
         <div class="accordion-item">
           <h2 class="accordion-header" id="headingOne">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
-              Personal Training <img class="icon" src="/assets/images/pt-icon-small.png" alt="Personal training icon">
+              Personal Training <img class="icon" src="assets/images/pt-icon-small.png" alt="Personal training icon">
             </button>
           </h2>
           <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne">
@@ -130,7 +130,7 @@
                           </div>
                       
                           <div class="col-11 col-md-4 align-items-center">
-                            <img class="acc-tab-pic" src="/assets/images/sarah-pt.jpg" alt="Sarah personal training">
+                            <img class="acc-tab-pic" src="assets/images/sarah-pt.jpg" alt="Sarah personal training">
                           </div>
                         </div>
                     </div>
@@ -146,7 +146,7 @@
                             We can use steps, beaches, hills, parks, woods and other places to have a great workout!</p>
                           </div>
                           <div class="col-12 col-sm-4 no-padding">
-                            <img class="acc-tab-pic" src="/assets/images/outdoor-pt.jpg" alt="Outdoor training picture">
+                            <img class="acc-tab-pic" src="assets/images/outdoor-pt.jpg" alt="Outdoor training picture">
                           </div>
                        </div>
                       </div>
@@ -161,7 +161,7 @@
                             <p>Using technology like Zoom/ Skype/ Facebook/ Whatsapp we will find a way to be able to be in contact with you.</p>
                           </div>
                           <div class="col-11 col-sm-5 no-padding">
-                            <img class="acc-tab-pic" src="/assets/images/online-pt.png" alt="Online screenshot">
+                            <img class="acc-tab-pic" src="assets/images/online-pt.png" alt="Online screenshot">
                           </div>
                        </div>
                       </div>
@@ -176,7 +176,7 @@
                             <p></p>
                           </div>
                           <div class="col-12 col-sm-5 no-padding">
-                            <img class="acc-tab-pic" src="/assets/images/tab-pic-prog.png" alt="Programme picture">
+                            <img class="acc-tab-pic" src="assets/images/tab-pic-prog.png" alt="Programme picture">
                           </div>
                        </div>
                       </div>
@@ -194,7 +194,7 @@
         <div class="accordion-item">
           <h2 class="accordion-header" id="headingTwo">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-              Sports Massage  <img class="icon" src="/assets/images/sm-icon-small.png" alt="Sports massage icon">
+              Sports Massage  <img class="icon" src="assets/images/sm-icon-small.png" alt="Sports massage icon">
             </button>
           </h2>
           <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo">
@@ -214,7 +214,7 @@
                     <h3 class="get-in-contact btn"><a href="#contactform">Free Injury Assessment</a></h3>
                   </div>
                   <div class="col-12 col-md-6">
-                    <img class="acc-pt-pic" src="/assets/images/sarah-sm.jpeg" alt="Sarah delivering sports massage">
+                    <img class="acc-pt-pic" src="assets/images/sarah-sm.jpeg" alt="Sarah delivering sports massage">
                   </div>
                 </div>
               </div>
@@ -225,7 +225,7 @@
         <div class="accordion-item">
           <h2 class="accordion-header" id="headingThree">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-              Memberships <img class="icon" src="/assets/images/gm-icon-small.png" alt="General membership icon">
+              Memberships <img class="icon" src="assets/images/gm-icon-small.png" alt="General membership icon">
             </button>
           </h2>
           <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree">
