--- a/courses.html
+++ b/courses.html
@@ -74,7 +74,7 @@
         <div class="accordion-item">
           <h2 class="accordion-header" id="headingOne">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
-              Personal Training Courses <img class="icon" src="/assets/images/pt-icon-small.png" alt="Smaller Personal training icon">
+              Personal Training Courses <img class="icon" src="assets/images/pt-icon-small.png" alt="Smaller Personal training icon">  <i class="bi bi-chevron-down chev-down"></i> <i class="bi bi-chevron-up chev-up"></i>
             </button>
           </h2>
           <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne">
@@ -189,7 +189,7 @@
         <div class="accordion-item">
           <h2 class="accordion-header" id="headingTwo">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-              Sports Massage Courses <img class="icon" src="/assets/images/sm-icon-small.png" alt="Small Sports massage icon">
+              Sports Massage Courses <img class="icon" src="assets/images/sm-icon-small.png" alt="Small Sports massage icon">  <i class="bi bi-chevron-down chev-down"></i> <i class="bi bi-chevron-up chev-up"></i>
             </button>
           </h2>
           <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo">
@@ -210,7 +210,7 @@
                     <p></p>
                   </div>
                   <div class="col-12 col-md-6">
-                    <img class="acc-pt-pic" src="/assets/images/sm-icon.png" alt="Sports massage icon">
+                    <img class="acc-pt-pic" src="assets/images/sm-icon.png" alt="Sports massage icon">
                   </div>
                 </div>
                 <!--Test start-->
@@ -259,14 +259,7 @@
                     </div>
                   </div>
                 </div>
-
                 <!--Test end-->
-
-
-
-
-
-
                 </div>
               </div>
             </div>
@@ -276,7 +269,7 @@
       <div class="accordion-item">
           <h2 class="accordion-header" id="headingThree">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-              First Aid Courses <img class="icon" src="/assets/images/first-aid-cropped.png" alt="First aid picture">
+              First Aid Courses <img class="icon" src="assets/images/first-aid-cropped.png" alt="First aid picture">  <i class="bi bi-chevron-down chev-down"></i> <i class="bi bi-chevron-up chev-up"></i>
             </button>
           </h2>
           <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree">
@@ -302,7 +295,7 @@
                     <p></p>
                   </div>
                   <div class="col-12 col-md-6">
-                    <img class="acc-pt-pic" src="/assets/images/first-aid-full.png" alt="Full First Aid picture">
+                    <img class="acc-pt-pic" src="assets/images/first-aid-full.png" alt="Full First Aid picture">
                   </div>
                 </div>
                 </div>
