--- a/gym.html
+++ b/gym.html
@@ -74,7 +74,7 @@
         <div class="accordion-item">
           <h2 class="accordion-header" id="headingOne">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
-              Personal Training <img class="icon" src="assets/images/pt-icon-small.png" alt="Personal training icon">
+               Personal Training <img class="icon" src="assets/images/pt-icon-small.png" alt="Personal training icon"> <i class="bi bi-chevron-down chev-down"></i> <i class="bi bi-chevron-up chev-up"></i>
             </button>
           </h2>
           <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne">
@@ -194,7 +194,7 @@
         <div class="accordion-item">
           <h2 class="accordion-header" id="headingTwo">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-              Sports Massage  <img class="icon" src="assets/images/sm-icon-small.png" alt="Sports massage icon">
+              Sports Massage  <img class="icon" src="assets/images/sm-icon-small.png" alt="Sports massage icon"> <i class="bi bi-chevron-down chev-down"></i> <i class="bi bi-chevron-up chev-up"></i>
             </button>
           </h2>
           <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo">
@@ -225,7 +225,7 @@
         <div class="accordion-item">
           <h2 class="accordion-header" id="headingThree">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-              Memberships <img class="icon" src="assets/images/gm-icon-small.png" alt="General membership icon">
+              Memberships <img class="icon" src="assets/images/gm-icon-small.png" alt="General membership icon"> <i class="bi bi-chevron-down chev-down"></i> <i class="bi bi-chevron-up chev-up"></i>
             </button>
           </h2>
           <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree">
