Hovers and picture spacings corrected

--- a/gym.html
+++ b/gym.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css" integrity="sha384-EvBWSlnoFgZlXJvpzS+MAUEjvN7+gcCwH+qh7GRFOGgZO0PuwOFro7qPOJnLfe7l" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Balanced Training</title>
   </head>
@@ -49,7 +50,7 @@
         <div class="row">
           <div class="col-3 topcontact">
             <a class="icon-link" href="https://maps.google.com/maps/dir//Balanced+Training+Unit+A3,+Seedbed+Business+Centre+Vanguard+Way+Southend-on-Sea+SS3+9QY/@51.534883,0.7957074,16z/data=!4m5!4m4!1m0!1m2!1m1!1s0x47d927b7c1b1e26d:0x8d658dbbe5f7866" target="_blank">
-              <i class="bi bi-pin-map-fill"></i> Unit A3 Seedbed</a>
+              <span class="hover"><i class="bi bi-pin-map-fill"></i> Directions</span></a>
           </div>
           <div class="col-5 topcontact"><i class="bi bi-telephone-fill"></i> 07764496281 01702382390
           </div>
@@ -106,7 +107,7 @@
                     <div class="tab-pane fade show active" id="v-pills-home" role="tabpanel" aria-labelledby="v-pills-home-tab">
                       <div class="container-fluid no-padding">
                         <div class="row no-padding">
-                          <div class="col-11 col-md-8 no-padding text-smaller">
+                          <div class="col-11 col-md-7 no-padding text-smaller">
                             <p> 
                               The environment is made for all types people wanting a private facility and almost feel like they are 
                               training in their very own gym. We have all the main bits of kit and some cool extras:</p>
@@ -129,7 +130,7 @@
                               <p>All together this offers some of the best focused personal training.</p>
                           </div>
                       
-                          <div class="col-11 col-md-4 align-items-center">
+                          <div class="col-11 col-md-5 align-items-center">
                             <img class="acc-tab-pic" src="assets/images/sarah-pt.jpg" alt="Sarah personal training">
                           </div>
                         </div>
@@ -139,13 +140,13 @@
                     <div class="tab-pane fade" id="v-pills-profile" role="tabpanel" aria-labelledby="v-pills-profile-tab">
                       <div class="container-fluid no-padding">
                         <div class="row no-padding">
-                          <div class="col-12 col-sm-7 no-padding text-smaller">
+                          <div class="col-11 col-sm-7 no-padding text-smaller">
                             <p>Training outdoors is a really fun way to get fit and have personal training. 
                             We have all sorts of portable equipment that we can use in conjunction with outdoor locations.</p>
                             <p>Shoeburyness and the seafront in general has so many interesting locations we can use. 
                             We can use steps, beaches, hills, parks, woods and other places to have a great workout!</p>
                           </div>
-                          <div class="col-12 col-sm-4 no-padding">
+                          <div class="col-11 col-sm-5 no-padding">
                             <img class="acc-tab-pic" src="assets/images/outdoor-pt.jpg" alt="Outdoor training picture">
                           </div>
                        </div>
@@ -170,12 +171,12 @@
                     <div class="tab-pane fade" id="v-pills-settings" role="tabpanel" aria-labelledby="v-pills-settings-tab">
                       <div class="container-fluid no-padding">
                         <div class="row no-padding">
-                          <div class="col-12 col-sm-7 no-padding text-smaller">
+                          <div class="col-11 col-sm-7 no-padding text-smaller">
                             <p>As an extention to online training we can write specific programs for many goals. We can do some of the fitness and health assessments in person if you are local and build a progrm from there.</p>
                             <p>Between us we have experience of competing of training towards many different physical goals: Sprinting, Marathons, treks, swimming, tough mudders and obstacle course races.</p>
                             <p></p>
                           </div>
-                          <div class="col-12 col-sm-5 no-padding">
+                          <div class="col-11 col-sm-5 no-padding">
                             <img class="acc-tab-pic" src="assets/images/tab-pic-prog.png" alt="Programme picture">
                           </div>
                        </div>
@@ -230,8 +231,8 @@
           </h2>
           <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree">
             <div class="accordion-body"></div>
-             <div class="container-fluid membership-img">
-               <div class="row">
+             <div class="container-fluid">
+               <div class="row membership-img">
                  <div class="col-12 col-md-6">
                   <ul class="list-group">
                     <li class="list-group-item"><h4 class="list-header">Studio Membership</h4></li>
@@ -262,38 +263,6 @@
              </div>
           </div>
         </div>
-      <!--Form-->
-      <form id="contactform">
-        <div class="container-fluid">
-          <div class="row">
-            <h1 class="contact-top membership-contact">Any questions or if you'd like a FREE Injury Assessment</h1>
-            <h2>Get in contact by filling out your information on the form below.</h2>
-          </div>
-          <div class="row justify-content-center">
-            <div class="col-12 col-sm-10 col-lg-8 col-xl-6">
-              <div class="input-group mb-1">
-                <span class="input-group-text basic-addon1" >First Name</span>
-                <input type="text" id="first-name" class="form-control" placeholder="First Name" aria-label="first-name" aria-describedby="first-name" required>
-              </div>
-              <div class="input-group mb-1">
-                  <span class="input-group-text basic-addon1">Last Name</span>
-                  <input type="text" id="last-name" class="form-control" placeholder="Last Name" aria-label="last-name" aria-describedby="last-name">
-              </div>
-              <div class="input-group mb-1">
-                <span class="input-group-text basic-addon1">Email Address</span>
-                <input type="email" id="email-address" class="form-control" placeholder="Email Address" aria-label="email" aria-describedby="email-address" required>
-              </div>
-              <div class="input-group mb-3">
-                <span class="input-group-text basic-addon1">Message:</span>
-                <textarea id="message-area" class="form-control" placeholder="Ask us anything" aria-label="message-area"></textarea>
-              </div>
-              <div class="text-center send-message-button">
-              <button type="submit" class="btn btn-primary" id="send-button">Send Message</button>
-            </div>
-         </div>
-        </div>
-        </div>
-      </form>
       <!--Opening Times-->
       <div class="container-fluid map-opening">
         <div class="row">
