--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css" integrity="sha384-EvBWSlnoFgZlXJvpzS+MAUEjvN7+gcCwH+qh7GRFOGgZO0PuwOFro7qPOJnLfe7l" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Balanced Training</title>
   </head>
@@ -48,8 +49,8 @@
       <div class="container-fluid no-padding">
         <div class="row">
           <div class="col-3 topcontact">
-            <a class="icon-link" href="https://maps.google.com/maps/dir//Balanced+Training+Unit+A3,+Seedbed+Business+Centre+Vanguard+Way+Southend-on-Sea+SS3+9QY/@51.534883,0.7957074,16z/data=!4m5!4m4!1m0!1m2!1m1!1s0x47d927b7c1b1e26d:0x8d658dbbe5f7866" target="_blank">
-              <i class="bi bi-pin-map-fill"></i> Unit A3 Seedbed</a>
+            <a class="icon-link hover" href="https://maps.google.com/maps/dir//Balanced+Training+Unit+A3,+Seedbed+Business+Centre+Vanguard+Way+Southend-on-Sea+SS3+9QY/@51.534883,0.7957074,16z/data=!4m5!4m4!1m0!1m2!1m1!1s0x47d927b7c1b1e26d:0x8d658dbbe5f7866" target="_blank">
+              <span class="hover"><i class="bi bi-pin-map-fill"></i> Directions</span></a>
           </div>
           <div class="col-5 topcontact"><i class="bi bi-telephone-fill"></i> 07764496281 01702382390
           </div>
@@ -70,35 +71,35 @@
         </div>
       </div>
       <!--Form-->
-      <form id="contactform">
+      <form>
         <div class="container-fluid">
           <div class="row">
-            <h1 class="contact-top membership-contact">If you have any questions get in contact!</h1>
+            <h1 class="contact-top">Get in contact!</h1>
             <h2>If you'd like to find out more information please fill out the form below.</h2>
           </div>
-          <dv class="row justify-content-center">
+          <div class="row justify-content-center">
             <div class="col-12 col-sm-10 col-lg-8 col-xl-6">
               <div class="input-group mb-1">
-                <span class="input-group-text" id="basic-addon1">First Name</span>
-                <input type="text" class="form-control" placeholder="First Name" aria-label="first-name" aria-describedby="basic-addon1" required>
+                <span class="input-group-text basic-addon1" >First Name</span>
+                <input type="text" id="first-name" class="form-control" placeholder="First Name" aria-label="first-name" aria-describedby="first-name" required>
               </div>
               <div class="input-group mb-1">
-                  <span class="input-group-text" id="basic-addon1">Last Name</span>
-                  <input type="text" class="form-control" placeholder="Last Name" aria-label="last-name" aria-describedby="basic-addon1">
+                  <span class="input-group-text basic-addon1">Last Name</span>
+                  <input type="text" id="last-name" class="form-control" placeholder="Last Name" aria-label="last-name" aria-describedby="last-name">
               </div>
               <div class="input-group mb-1">
-                <span class="input-group-text" id="basic-addon1">Email Address</span>
-                <input type="email" class="form-control" placeholder="Email Address" aria-label="email" aria-describedby="basic-addon1" required>
+                <span class="input-group-text basic-addon1">Email Address</span>
+                <input type="email" id="email-address" class="form-control" placeholder="Email Address" aria-label="email" aria-describedby="email-address" required>
               </div>
               <div class="input-group mb-3">
-                <span class="input-group-text" id="basic-addon1">Message:</span>
-                <textarea class="form-control" placeholder="Ask us anything" aria-label="message-area"></textarea>
+                <span class="input-group-text basic-addon1">Message:</span>
+                <textarea id="message-area" class="form-control" placeholder="Ask us anything" aria-label="message-area"></textarea>
               </div>
               <div class="text-center send-message-button">
               <button type="submit" class="btn btn-primary" id="send-button">Send Message</button>
             </div>
          </div>
-        </dv>
+        </div>
         </div>
       </form>
     </section>
