--- a/index.html
+++ b/index.html
@@ -8,14 +8,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css" integrity="sha384-EvBWSlnoFgZlXJvpzS+MAUEjvN7+gcCwH+qh7GRFOGgZO0PuwOFro7qPOJnLfe7l" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
-
     <title>Balanced Training</title>
   </head>
 <body>
@@ -56,8 +50,9 @@
       <div class="container-fluid no-padding">
         <div class="row">
           <div class="col-3 topcontact">
-            <a class="icon-link" href="https://maps.google.com/maps/dir//Balanced+Training+Unit+A3,+Seedbed+Business+Centre+Vanguard+Way+Southend-on-Sea+SS3+9QY/@51.534883,0.7957074,16z/data=!4m5!4m4!1m0!1m2!1m1!1s0x47d927b7c1b1e26d:0x8d658dbbe5f7866" target="_blank">
-              <i class="bi bi-pin-map-fill"></i> Unit A3 Seedbed</a></div>
+            <a class="icon-link hover" href="https://maps.google.com/maps/dir//Balanced+Training+Unit+A3,+Seedbed+Business+Centre+Vanguard+Way+Southend-on-Sea+SS3+9QY/@51.534883,0.7957074,16z/data=!4m5!4m4!1m0!1m2!1m1!1s0x47d927b7c1b1e26d:0x8d658dbbe5f7866" target="_blank">
+              <span class="hover"><i class="bi bi-pin-map-fill"></i> Directions</span></a>
+            </div>
           <div class="col-5 topcontact"><i class="bi bi-telephone-fill"></i> 07764496281 01702382390</div>
           <div class="col-4 social-top row">
             <div class="col no-padding">
@@ -167,7 +162,7 @@
               </p>
           </div>
           <div class="col-12 col-md-6 col-lg-4 shadow p-3 mb-5 bg-body rounded">
-            <img class="profilepic" src="assets/images/cropped-Max.webp" alt="Max profile pic">
+            <img class="profilepic" src="assets/images/max_head.JPG" alt="Max profile pic">
             <h4>Maximus - Emotional Support</h4>
             <p>This little guy is an integral part of our team at Balanced Training and always brings a smile to 
               your face whenever he comes through the gym door carrying a ball. He usually likes to chill
