Sub banner socials fixed on smaller screen

--- a/courses.html
+++ b/courses.html
@@ -48,13 +48,14 @@
       <!--Top band under the header-->
       <div class="container-fluid no-padding">
         <div class="row">
-          <div class="col-3 topcontact">
+          <div class="col-6 col-sm-3 topcontact">
             <a class="icon-link hover" href="https://maps.google.com/maps/dir//Balanced+Training+Unit+A3,+Seedbed+Business+Centre+Vanguard+Way+Southend-on-Sea+SS3+9QY/@51.534883,0.7957074,16z/data=!4m5!4m4!1m0!1m2!1m1!1s0x47d927b7c1b1e26d:0x8d658dbbe5f7866" target="_blank">
               <span class="hover"><i class="bi bi-pin-map-fill"></i> Directions</span></a>
           </div>
-          <div class="col-5 topcontact"><i class="bi bi-telephone-fill"></i> 07764496281 01702382390
+          <div class="col-6 col-sm-5 topcontact"><i class="bi bi-telephone-fill"></i> 07764496281 01702382390
           </div>
-          <div class="col-4 social-top row">
+          <div class="col-4 d-none d-sm-block no-padding">
+          <div class="row social-top">
             <div class="col no-padding">
               <a class="icon-link" href="https://facebook.com/BalancedPTS/" target="_blank">
               <i class="bi bi-facebook icon-size"></i></a>
@@ -69,6 +70,7 @@
             </div>
           </div>
         </div>
+        </div>
       </div>
       <!--Accordion-->
       <div class="accordion" id="accordionExample">
@@ -81,7 +83,7 @@
           <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne">
             <div class="accordion-body">
               <div class="container-fluid">
-                <div class="row top-tabs">
+                <div class="row top-tabs align-items-center">
                   <div class="col-12 col-md-8">
                     <h3>Becoming a Personal Trainer</h3>
                     <p>Personal training has always been the premium product in a gym environment.</p>
@@ -193,7 +195,7 @@
           <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo">
             <div class="accordion-body">
               <div class="container-fluid">
-                <div class="row top-tabs">
+                <div class="row top-tabs align-items-center">
                   <div class="col-12 col-md-6">
                     <h3>Becoming a Sports Massage Therapist</h3>
                     <p>Our Sports Massage courses can supply you with the skills, 
@@ -270,7 +272,7 @@
           <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree">
             <div class="accordion-body">
               <div class="container-fluid">
-                <div class="row top-tabs">
+                <div class="row top-tabs align-items-center">
                   <div class="col-12 col-md-6">
                     <h3>Emergency First Aid & First Aid at Work</h3>
                     <p>The difference between the 2 first aid courses we deliver is:</p>
@@ -296,6 +298,9 @@
                 </div>
               </div>
           </div>
+      </div>
+      <div><h3 class="text-center">If you would like to know more about <br>any of our courses please get in contact!</h3>
+        <h3 class="get-in-contact btn"><a href="../contact.html">Press Here!</a></h3>
       </div>
     </section>
     <footer>
