--- a/gym.html
+++ b/gym.html
@@ -48,13 +48,14 @@
       <!--Top band under the header-->
       <div class="container-fluid no-padding">
         <div class="row">
-          <div class="col-3 topcontact">
-            <a class="icon-link" href="https://maps.google.com/maps/dir//Balanced+Training+Unit+A3,+Seedbed+Business+Centre+Vanguard+Way+Southend-on-Sea+SS3+9QY/@51.534883,0.7957074,16z/data=!4m5!4m4!1m0!1m2!1m1!1s0x47d927b7c1b1e26d:0x8d658dbbe5f7866" target="_blank">
+          <div class="col-6 col-sm-3 topcontact">
+            <a class="icon-link hover" href="https://maps.google.com/maps/dir//Balanced+Training+Unit+A3,+Seedbed+Business+Centre+Vanguard+Way+Southend-on-Sea+SS3+9QY/@51.534883,0.7957074,16z/data=!4m5!4m4!1m0!1m2!1m1!1s0x47d927b7c1b1e26d:0x8d658dbbe5f7866" target="_blank">
               <span class="hover"><i class="bi bi-pin-map-fill"></i> Directions</span></a>
           </div>
-          <div class="col-5 topcontact"><i class="bi bi-telephone-fill"></i> 07764496281 01702382390
+          <div class="col-6 col-sm-5 topcontact"><i class="bi bi-telephone-fill"></i> 07764496281 01702382390
           </div>
-          <div class="col-4 social-top row">
+          <div class="col-4 d-none d-sm-block no-padding">
+          <div class="row social-top">
             <div class="col no-padding">
               <a class="icon-link" href="https://facebook.com/BalancedPTS/" target="_blank">
               <i class="bi bi-facebook icon-size"></i></a>
@@ -68,6 +69,7 @@
               <i class="bi bi-linkedin icon-size"></i></a>
             </div>
           </div>
+        </div>
         </div>
       </div>
       <!--Accordion-->
@@ -231,7 +233,7 @@
           </h2>
           <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree">
             <div class="accordion-body"></div>
-             <div class="container-fluid">
+             <div class="container-fluid no-padding">
                <div class="row membership-img">
                  <div class="col-12 col-md-6">
                   <ul class="list-group">
